modifying news in dashboard

--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -81,3 +81,10 @@
   </ul>
 </nav>
 <!-- /.navbar -->
+<script>
+  // Get a reference to the body element
+  var body = document.querySelector('body');
+  
+  // Add a class to the body element to hide the menu by default
+  body.classList.add('sidebar-collapse');
+</script>
