--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -10,7 +10,7 @@
       ></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a href="index3.html" class="nav-link">Home</a>
+      <a href="main-dashboard.html" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a href="#" class="nav-link">Contact</a>
