Some modifying for log in and register page

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -25,7 +25,7 @@
 
     <div class="login-logo">
         <a target="_blank" rel="noopener noreferrer" 
-           href="https://appseed.us/product/adminlte/flask/"><b>Admin</b>LTE Flask</a>
+           href="/"><b>Tradeyoo</b> Stock Analysis</a>
     </div>
 
     <!-- /.login-logo -->
@@ -36,7 +36,7 @@
             {% if msg %}
               <span class="text-danger">{{ msg | safe }}</span>
             {% else %}
-                Add your credentials
+                Enter your Username and Password
             {% endif %}
         </p>
 
@@ -78,12 +78,12 @@
 
         <div class="text-center">
             Not a member? <a href="{{ url_for('register') }}" class="text-center">Register</a>
-            <br />
+            <!--<br />
             <br />
             &copy; ColorLib 
             <a target="_blank" rel="noopener noreferrer"
                href="https://appseed.us/product/adminlte/flask/"><b>Admin</b>LTE</a> 
-            - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
+            - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.-->
         </div>
 
       </div>
