--- a/apps/templates/home/examples-recover-password.html
+++ b/apps/templates/home/examples-recover-password.html
@@ -23,7 +23,7 @@
 
   <div class="login-box">
     <div class="login-logo">
-      <a href="/"><b>Admin</b>LTE</a>
+      <a href="/"><b>Tradeyoo</b> Stock Analysis</a>
     </div>
     <!-- /.login-logo -->
     <div class="card">
