--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -25,7 +25,7 @@
 
     <div class="login-logo">
         <a target="_blank" rel="noopener noreferrer" 
-           href="https://appseed.us/product/adminlte/flask/"><b>Admin</b>LTE Flask</a>
+           href="/"><b>Tradeyoo</b> Stock Analysis</a>
     </div>    
 
     <div class="card">
@@ -35,7 +35,7 @@
                 <span class="text-danger">{{ msg | safe }}</span>
             {% else %}
             <span>
-                Add your credentials
+                Register New User
             </span>
             {% endif %}            
         </p>
@@ -87,12 +87,12 @@
         <br />
         <div class="text-center">
             Have an account? <a href="{{ url_for('login') }}" class="text-center">Login</a>
-            <br />
+            <!--<br />
             <br />
             &copy; ColorLib 
             <a target="_blank" rel="noopener noreferrer"
                href="https://appseed.us/product/adminlte/flask/"><b>Admin</b>LTE</a> 
-            - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
+            - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.-->
         </div>
 
       </div>
