--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -7,12 +7,20 @@
 {% block stylesheets %}
 
 <!-- Google Font: Source Sans Pro -->
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+/>
 <!-- Font Awesome Icons -->
-<link rel="stylesheet" href="/static/assets/plugins/fontawesome-free/css/all.min.css" />
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/fontawesome-free/css/all.min.css"
+/>
 <!-- IonIcons -->
-<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+<link
+  rel="stylesheet"
+  href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+/>
 <!-- Theme style -->
 <link rel="stylesheet" href="/static/assets/css/adminlte.min.css" />
 
@@ -103,7 +111,9 @@
             <div class="icon">
               <i class="ion ion-bag"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            <a href="#" class="small-box-footer"
+              >More info <i class="fas fa-arrow-circle-right"></i
+            ></a>
           </div>
         </div>
         <!-- ./col -->
@@ -118,7 +128,9 @@
             <div class="icon">
               <i class="ion ion-stats-bars"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            <a href="#" class="small-box-footer"
+              >More info <i class="fas fa-arrow-circle-right"></i
+            ></a>
           </div>
         </div>
         <!-- ./col -->
@@ -133,7 +145,9 @@
             <div class="icon">
               <i class="ion ion-person-add"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            <a href="#" class="small-box-footer"
+              >More info <i class="fas fa-arrow-circle-right"></i
+            ></a>
           </div>
         </div>
         <!-- ./col -->
@@ -148,7 +162,9 @@
             <div class="icon">
               <i class="ion ion-pie-graph"></i>
             </div>
-            <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            <a href="#" class="small-box-footer"
+              >More info <i class="fas fa-arrow-circle-right"></i
+            ></a>
           </div>
         </div>
         <!-- ./col -->
@@ -246,7 +262,13 @@
 <script src="/static/assets/js/demo.js"></script>
 <script src="/static/assets/js/pages/dashboard3.js"></script>
 
-<script>
+<script type="module">
+
+  import { Mediator } from "/static/assets/mediator.js";
+
+  // Create a new Mediator object
+  const mediator = new Mediator();
+
   /*var getStockData = $.get('/main-dashboard-data');
  // Get the table body element
    const tableBody = document.querySelector("tbody");
@@ -254,13 +276,10 @@
    const stockData = JSON.parse(stocks);
    const tableBody = document.querySelector("tbody");*/
 
-  var getStockData = $.get("/data");
-
-  // Get the table body element
-  getStockData.done(function (stockData) {
+  mediator.register("get_chart_data", function (data) {
     const tableBody = document.querySelector("tbody");
     //stockData = JSON.parse(stockData);
-    for (const [symbol, financialData] of Object.entries(stockData)) {
+    for (const [symbol, financialData] of Object.entries(data)) {
       const row = document.createElement("tr");
 
       const symbolCell = document.createElement("td");
@@ -328,49 +347,59 @@
     }
   });
 
-  var getNewsData = $.get("/main-dashboard-news-data");
-  // Get the table body element
-  getNewsData.done(function (newsData) {
-    //console.log(newsData)
-    newsData = JSON.parse(newsData);
-
-    for (const [symbol, newsItem] of Object.entries(newsData)) {
-
-      const cardId = `#${symbol}_news_card`; // Construct the card ID based on the current symbol
-      const card = document.querySelector(cardId);
-
-      // Update the card elements with data from the current newsItem
-      const cardImg = card.querySelector("img");
-      const cardTitle = card.querySelector("h2");
-      const cardText = card.querySelector("p");
-      const cardSource = card.querySelector(".card-footer span:first-child");
-      const cardTime = card.querySelector(".card-footer span:last-child");
-
-      cardImg.src = newsItem.banner_image;
-      cardTitle.textContent = newsItem.title;
-      cardText.textContent = newsItem.summary;
-      cardSource.textContent = newsItem.source;
-
-      const timeString = newsItem.time_published
-      console.log(newsItem.time_published)
-      const date = new Date(
-        timeString.slice(0, 4),
-        Number(timeString.slice(4, 6)) - 1,
-        timeString.slice(6, 8),
-        timeString.slice(9, 11),
-        timeString.slice(11, 13),
-        timeString.slice(13, 15)
-      );
-
-      const formattedDate = date.toLocaleDateString("en-US", { month: "long", day: "numeric", year: "numeric", hour: "numeric", minute: "numeric", second: "numeric" });
-      console.log(formattedDate);
-      cardTime.textContent = formattedDate;
-
-    }
-  }).fail(function (jqXHR, textStatus, errorThrown) {
-    console.error("Error getting news data: " + textStatus, errorThrown);
+  $.get("/data", function (data) {
+    mediator.notify("get_chart_data", data);
   });
 
+  var getNewsData = $.get("/main-dashboard-news-data");
+  // Get the table body element
+  getNewsData
+    .done(function (newsData) {
+      //console.log(newsData)
+      newsData = JSON.parse(newsData);
+
+      for (const [symbol, newsItem] of Object.entries(newsData)) {
+        const cardId = `#${symbol}_news_card`; // Construct the card ID based on the current symbol
+        const card = document.querySelector(cardId);
+
+        // Update the card elements with data from the current newsItem
+        const cardImg = card.querySelector("img");
+        const cardTitle = card.querySelector("h2");
+        const cardText = card.querySelector("p");
+        const cardSource = card.querySelector(".card-footer span:first-child");
+        const cardTime = card.querySelector(".card-footer span:last-child");
+
+        cardImg.src = newsItem.banner_image;
+        cardTitle.textContent = newsItem.title;
+        cardText.textContent = newsItem.summary;
+        cardSource.textContent = newsItem.source;
+
+        const timeString = newsItem.time_published;
+        console.log(newsItem.time_published);
+        const date = new Date(
+          timeString.slice(0, 4),
+          Number(timeString.slice(4, 6)) - 1,
+          timeString.slice(6, 8),
+          timeString.slice(9, 11),
+          timeString.slice(11, 13),
+          timeString.slice(13, 15)
+        );
+
+        const formattedDate = date.toLocaleDateString("en-US", {
+          month: "long",
+          day: "numeric",
+          year: "numeric",
+          hour: "numeric",
+          minute: "numeric",
+          second: "numeric",
+        });
+        console.log(formattedDate);
+        cardTime.textContent = formattedDate;
+      }
+    })
+    .fail(function (jqXHR, textStatus, errorThrown) {
+      console.error("Error getting news data: " + textStatus, errorThrown);
+    });
 </script>
 
 {% endblock javascripts %}
