using controller in views.py

--- a/apps/templates/home/edit-profile.html
+++ b/apps/templates/home/edit-profile.html
@@ -117,14 +117,14 @@
               <ul class="nav nav-pills">
 
 
-                <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Settings</a></li>
+                <li class="nav-item"><a class="nav-link" href="#edit_prof" data-toggle="tab">Edit Profile</a></li>
               </ul>
             </div><!-- /.card-header -->
             <div class="card-body">
               <div class="tab-content">
                 <!-- /.tab-pane -->
 
-                <div class="active tab-pane" id="settings">
+                <div class="active tab-pane" id="edit_prof">
                   <form class="form-horizontal" method="POST">
                     <input type="hidden" name="edit_account" value="1">
                     <div class="form-group row">
@@ -165,14 +165,14 @@
               <ul class="nav nav-pills">
 
 
-                <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Delete Account</a></li>
+                <li class="nav-item"><a class="nav-link" href="#delete_acc" data-toggle="tab">Delete Account</a></li>
               </ul>
             </div><!-- /.card-header -->
             <div class="card-body">
               <div class="tab-content">
                 <!-- /.tab-pane -->
 
-                <div class="active tab-pane" id="settings">
+                <div class="active tab-pane" id="delete_acc">
                   <p class="login-box-msg">
                     {% if msg %}
                     <span class="text-danger">{{ msg | safe }}</span>
