--- a/apps/templates/home/Notfications.html
+++ b/apps/templates/home/Notfications.html
@@ -63,7 +63,11 @@ layout-footer-fixed {% endblock body_class %}
               <a href="javascript:void({{item.id}})" class="product-title">
                 {{ item.title}}
                 <div class="card-tools float-right">
-                  <button type="button" class="btn btn-tool delete-button" data-id="{{ item.id }}">
+                  <button
+                    type="button"
+                    class="btn btn-tool delete-button"
+                    data-id="{{ item.id }}"
+                  >
                     <i class="fas fa-times"></i>
                   </button>
                 </div>
@@ -118,8 +122,21 @@ layout-footer-fixed {% endblock body_class %}
 <!-- PAGE SCRIPTS -->
 <script src="/static/assets/js/pages/dashboard2.js"></script>
 
-<script>
-  // Get all the delete buttons
+<script type="module">
+  import { Mediator } from "/static/assets/mediator.js";
+
+  // Create a new Mediator object
+  const mediator = new Mediator();
+
+  // Register a handler function with the mediator to remove the corresponding list item when the data has been deleted
+  mediator.register("dataDeleted", function (params) {
+    const button = params.button;
+    const itemId = params.itemId;
+    // Find the corresponding list item and remove it
+    const listItem = button.closest(".item");
+    listItem.remove();
+  });
+
   const deleteButtons = document.querySelectorAll(".delete-button");
 
   // Add a click event listener to each delete button
@@ -128,19 +145,16 @@ layout-footer-fixed {% endblock body_class %}
       const itemId = button.dataset.id;
 
       $.ajax({
-            type: "POST",
-            url: '/delete_notification',
-            data: JSON.stringify(itemId),
-            contentType: "application/json",
-            success: function (response) {
-              console.log(response);
-            },
-          });
-
-      // Find the corresponding list item and remove it
-      const listItem = button.closest(".item");
-      listItem.remove();
-
+        type: "POST",
+        url: "/delete_notification",
+        data: JSON.stringify(itemId),
+        contentType: "application/json",
+        success: function (response) {
+          console.log(response);
+          // Notify the mediator that the data has been deleted
+          mediator.notify("dataDeleted", { button: button, itemId: itemId });
+        },
+      });
     });
   });
 </script>
