--- a/apps/templates/home/watchlist.html
+++ b/apps/templates/home/watchlist.html
@@ -156,5 +156,5 @@
 <script src="/static/assets/plugins/chart.js/Chart.min.js"></script>
 <script src="/static/assets/js/demo.js"></script>
 <script src="/static/assets/js/pages/dashboard3.js"></script>
-<script type="module" src="/static/assets/js/watchlist.js"></script>
+<script src="/static/assets/js/main_dashboard.js"> </script>
 {% endblock javascripts %}
