--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -262,6 +262,6 @@
 <script src="/static/assets/js/demo.js"></script>
 <script src="/static/assets/js/pages/dashboard3.js"></script>
 
-<script type="module" src="/static/assets/js/main_dashboard.js"> </script>
+<script src="/static/assets/js/main_dashboard.js"> </script>
 
 {% endblock javascripts %}
