--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -200,7 +200,7 @@
                     <th>Add</th>
                   </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="Dashboard_tbody"></tbody>
               </table>
             </div>
           </div>
@@ -262,6 +262,6 @@
 <script src="/static/assets/js/demo.js"></script>
 <script src="/static/assets/js/pages/dashboard3.js"></script>
 
-<script src="/static/assets/js/main_dashboard.js"> </script>
+<script src="/static/assets/js/mainfile.js"> </script>
 
 {% endblock javascripts %}
