--- a/apps/templates/home/watchlist.html
+++ b/apps/templates/home/watchlist.html
@@ -116,7 +116,7 @@
                     <th>Delete</th>
                   </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="watchlist_tbody"></tbody>
               </table>
             </div>
           </div>
@@ -156,5 +156,5 @@
 <script src="/static/assets/plugins/chart.js/Chart.min.js"></script>
 <script src="/static/assets/js/demo.js"></script>
 <script src="/static/assets/js/pages/dashboard3.js"></script>
-<script src="/static/assets/js/main_dashboard.js"> </script>
+<script src="/static/assets/js/mainfile.js"> </script>
 {% endblock javascripts %}
