fixing javascript errors

--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -258,9 +258,9 @@
 <script src="/static/assets/js/adminlte.js"></script>
 
 <!-- OPTIONAL SCRIPTS -->
-<script src="/static/assets/plugins/chart.js/Chart.min.js"></script>
+<!--<script src="/static/assets/plugins/chart.js/Chart.min.js"></script>-->
 <script src="/static/assets/js/demo.js"></script>
-<script src="/static/assets/js/pages/dashboard3.js"></script>
+<!--<script src="/static/assets/js/pages/dashboard3.js"></script>-->
 
 <script src="/static/assets/js/mainfile.js"> </script>
 
