--- a/apps/templates/home/Notfications.html
+++ b/apps/templates/home/Notfications.html
@@ -39,7 +39,7 @@ layout-footer-fixed {% endblock body_class %}
         <!-- /.col -->
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
             <li class="breadcrumb-item active">Notifications</li>
           </ol>
         </div>
