--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -5,9 +5,7 @@
   <!-- Left navbar links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" data-widget="pushmenu" href="#" role="button"
-        ><i class="fas fa-bars"></i
-      ></a>
+      <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a href="main-dashboard.html" class="nav-link">Home</a>
@@ -20,12 +18,7 @@
   <!-- SEARCH FORM -->
   <form class="form-inline ml-3">
     <div class="input-group input-group-sm">
-      <input
-        class="form-control form-control-navbar"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
+      <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search" />
       <div class="input-group-append">
         <button class="btn btn-navbar" type="submit">
           <i class="fas fa-search"></i>
@@ -44,39 +37,6 @@
         <i class="far fa-bell"></i>
         <span class="badge badge-warning navbar-badge" id="notification-count"></span>
       </a>
-      <!-- <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-          <span class="dropdown-item dropdown-header">15 Notifications</span> -->
-
-      <!-- <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
-          </a> -->
-      <!-- <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
-          </a> -->
-      <!-- <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">
-            <i class="fas fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
-          </a> -->
-      <!--   <div class="dropdown-divider"></div>
-          <a href="/Notfications" class="dropdown-item dropdown-footer">See All Notifications</a> -->
-      <!--         </div>
- -->
-    </li>
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        data-widget="control-sidebar"
-        data-slide="true"
-        href="#"
-        role="button"
-      >
-        <i class="fas fa-th-large"></i>
-      </a>
     </li>
   </ul>
 </nav>
@@ -84,7 +44,7 @@
 <script>
   // Get a reference to the body element
   var body = document.querySelector('body');
-  
+
   // Add a class to the body element to hide the menu by default
   body.classList.add('sidebar-collapse');
 </script>
