--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -207,6 +207,9 @@
           <!-- /.card -->
         </div>
         <div class="col-lg-3">
+          <a href="news-board.html" 
+              >More News <i class="fas fa-arrow-circle-right"></i
+            ></a>
           <div class="card news_card" id="AAPL_news_card">
             <img src="" alt="Banner image" />
             <h2></h2>
